--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,6 +8,8 @@
         type="search"
         name='searchText'
         [(ngModel)]="searchText"
+        (ngModelChange)="onSearchChange($event)"
+        autocomplete="off"
         placeholder="Search by Character Name"
         aria-label="Search"
       />
