--- a/src/app/components/charcterlist/charcterlist.component.css
+++ b/src/app/components/charcterlist/charcterlist.component.css
@@ -1,15 +1,30 @@
 .heading{
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 80px;
-    font-weight: bold;
+    
+}
+
+.heading h2 {
+   font-weight: bold;
     font-size: 30px;
 }
+
+.search_result{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.search_result span{
+  font-weight: bold;
+}
+
 
 .characterlist {
   display: flex;
   flex-wrap: wrap;
   gap: 32px;
-  justify-content: center; /* ensures center alignment even when items wrap */
+ /* ensures center alignment even when items wrap */
   margin-top: 20px;
  
 }
