--- a/src/app/components/charcterlist/charcterlist.component.html
+++ b/src/app/components/charcterlist/charcterlist.component.html
@@ -32,13 +32,16 @@
     </div>
 
      <div style=" margin: 10px 0px; display: flex; justify-content: center;" >
-    <mat-paginator
-      [length]="charcterList.length"
+   
+      @if(filteredList.length > 8){
+         <mat-paginator
+      [length]="filteredList.length"
       [pageSize]="8"
       [pageSizeOptions]="[8, 16, 24]"
       (page)="onPageChange($event)"
     >
     </mat-paginator>
+      }
   </div>
 
     @if(selectCharacter){
